--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,13 @@ services:
   postgres:
     image: postgres:16
     container_name: postgres_db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: petshop
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./src/database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./src/modules/database/init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: always
 
   adminer:
